--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,8 +4,9 @@ steps:
   - gcloud
   - functions
   - deploy
-  - cloudbuildtest
+  - app
   - --region=asia-northeast1
   - --source=.
   - --trigger-http
   - --runtime=nodejs16
+  - --allow-unauthenticated
