--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
   - gcloud
   - functions
   - deploy
-  - app
+  - cloudbuildtest
   - --region=asia-northeast1
   - --source=.
   - --trigger-http
