--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,3 +12,13 @@ steps:
   - --source=.
   - --trigger-http
   - --runtime=nodejs16
+
+- name: 'allow-unauthenticated'
+  args:
+  - gcloud alpha 
+  - functions 
+  - add-iam-policy-binding 
+  - cloudBuildTest 
+  - --region=asia-northeast1 
+  - --member=allUsers 
+  - --role=roles/cloudfunctions.invoker
