--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,6 +13,6 @@ steps:
   - --trigger-http
   - --runtime=nodejs16
 
-- name: 'allow-unauthenticated'
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   args:
   - gcloud alpha functions add-iam-policy-binding cloudBuildTest --region=asia-northeast1 --member=allUsers --role=roles/cloudfunctions.invoker
